deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-s3-cache
  labels:
    app: mastodon
  namespace: mastodon
spec:
  selector:
    app: mastodon
  ports:
    # - protocol: TCP
    #   port: 80
    #   targetPort: 80
    #   name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-s3-cache
  labels:
    app: mastodon
  namespace: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastodon
  template:
    metadata:
      labels:
        app: mastodon
    spec:
      containers:
        - name: nginx
          image: nginx:1.20
          imagePullPolicy: IfNotPresent
          ports:
            # - containerPort: 80
            #   name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: tls
              mountPath: /etc/nginx/ssl
            # - name: mastodon-s3-cache
            #   mountPath: /var/nginx/cache
      volumes:
        - name: config
          configMap:
            name: mastodon-s3-cache
        - name: tls
          secret:
            secretName: example-mastodon-s3-tls
        # - name: mastodon-s3-cache
        #   emptyDir: {}
